Add writable level text

--- a/src/assets/lillacreate/lang/en_us.json
+++ b/src/assets/lillacreate/lang/en_us.json
@@ -4,4 +4,8 @@
   "modifier.lillacreate.steampunk.3": "Steampunk III",
   "modifier.lillacreate.steampunk.flavor": "Now with 42% more brass and 100% more clanking!",
   "modifier.lillacreate.steampunk.description": "Bolts on a brand-new ability slot using steam, gears, and blind optimism. May occasionally hiss at villagers.",
+  "modifier.tconstruct.writable.2": "Writable II",
+  "modifier.tconstruct.writable.3": "Writable III",
+  "modifier.tconstruct.writable.4": "Writable IV",
+  "modifier.tconstruct.writable.5": "Writable V"
 }
