--- a/src/assets/lillacreate/lang/hu_hu.json
+++ b/src/assets/lillacreate/lang/hu_hu.json
@@ -3,5 +3,9 @@
   "modifier.lillacreate.steampunk.2": "Steampunk II",
   "modifier.lillacreate.steampunk.3": "Steampunk III",
   "modifier.lillacreate.steampunk.flavor": "Most 42%-kal több sárgarézzel és 100%-kal több csattogással!",
-  "modifier.lillacreate.steampunk.description": "Egy új képességhelyet csavaroz fel gőzzel, fogaskerekekkel és vakmerő optimizmussal. Időnként sziszeghet a falusiakra."
+  "modifier.lillacreate.steampunk.description": "Egy új képességhelyet csavaroz fel gőzzel, fogaskerekekkel és vakmerő optimizmussal. Időnként sziszeghet a falusiakra.",
+  "modifier.tconstruct.writable.2": "Írható II",
+  "modifier.tconstruct.writable.3": "Írható III",
+  "modifier.tconstruct.writable.4": "Írható IV",
+  "modifier.tconstruct.writable.5": "Írható V"
 }
