--- a/src/assets/lillacreate/lang/en_us.json
+++ b/src/assets/lillacreate/lang/en_us.json
@@ -7,5 +7,10 @@
   "modifier.tconstruct.writable.2": "Writable II",
   "modifier.tconstruct.writable.3": "Writable III",
   "modifier.tconstruct.writable.4": "Writable IV",
-  "modifier.tconstruct.writable.5": "Writable V"
+  "modifier.tconstruct.writable.5": "Writable V",
+
+  "advancements.lillacreate.root.title": "Lilla Creates",
+  "advancements.lillacreate.root.desc": "Welcome to Lilla's Create Pack",
+  "advancements.lillacreate.before_night.title": "Prepare for the Night",
+  "advancements.lillacreate.before_night.desc": "Craft a bed"
 }
