--- a/src/assets/lillacreate/lang/hu_hu.json
+++ b/src/assets/lillacreate/lang/hu_hu.json
@@ -12,5 +12,9 @@
   "advancements.lillacreate.root.title": "Lilla alkot",
   "advancements.lillacreate.root.desc": "Üdvözöljük a Lilla's Create modpack-ban!",
   "advancements.lillacreate.before_night.title": "Készülj fel az éjszakára",
-  "advancements.lillacreate.before_night.desc": "Készíts egy ágyat"
+  "advancements.lillacreate.before_night.desc": "Készíts egy ágyat",
+  "advancements.lillacreate.sleepy_head.title": "Hétalvó",
+  "advancements.lillacreate.sleepy_head.desc": "Aludj át hét éjszakát egymás után",
+  "advancements.lillacreate.weapon.title": "Úgyse használom",
+  "advancements.lillacreate.weapon.desc": "Szerezz egy fegyvert"
 }
