--- a/src/assets/lillacreate/lang/en_us.json
+++ b/src/assets/lillacreate/lang/en_us.json
@@ -12,5 +12,9 @@
   "advancements.lillacreate.root.title": "Lilla Creates",
   "advancements.lillacreate.root.desc": "Welcome to Lilla's Create Pack",
   "advancements.lillacreate.before_night.title": "Prepare for the Night",
-  "advancements.lillacreate.before_night.desc": "Craft a bed"
+  "advancements.lillacreate.before_night.desc": "Craft a bed",
+  "advancements.lillacreate.sleepy_head.title": "Sleepy Head",
+  "advancements.lillacreate.sleepy_head.desc": "Sleep through seven nights in a row",
+  "advancements.lillacreate.weapon.title": "I don't even use it",
+  "advancements.lillacreate.weapon.desc": "Get a weapon"
 }
