--- a/src/assets/lillacreate/lang/hu_hu.json
+++ b/src/assets/lillacreate/lang/hu_hu.json
@@ -15,6 +15,6 @@
   "advancements.lillacreate.before_night.desc": "Készíts egy ágyat",
   "advancements.lillacreate.sleepy_head.title": "Hétalvó",
   "advancements.lillacreate.sleepy_head.desc": "Aludj át hét éjszakát egymás után",
-  "advancements.lillacreate.weapon.title": "Úgyse használom",
+  "advancements.lillacreate.weapon.title": "Úgysem használom",
   "advancements.lillacreate.weapon.desc": "Szerezz egy fegyvert"
 }
