--- a/src/assets/lillacreate/lang/hu_hu.json
+++ b/src/assets/lillacreate/lang/hu_hu.json
@@ -9,6 +9,21 @@
   "modifier.tconstruct.writable.4": "Írható IV",
   "modifier.tconstruct.writable.5": "Írható V",
 
+  "advancements.beautify.root.title": "Szépüljünk!",
+  "advancements.beautify.root.desc": "Az ördög a részletekben rejlik.",
+  "advancements.beautify.blinds.title": "Redőnyök",
+  "advancements.beautify.blinds.desc": "Készíts redőnyöket, hogy kiszűrd a fényt",
+  "advancements.beautify.bookstack.title": "Nincs polc rendezés",
+  "advancements.beautify.bookstack.desc": "Ki a fene használ polcokat? Készíts egy könyvrakást",
+  "advancements.beautify.candelabra.title": "Gonosz!",
+  "advancements.beautify.candelabra.desc": "Készíts egy kandelábert",
+  "advancements.beautify.hanging_pot.title": "Hagyd lógni",
+  "advancements.beautify.hanging_pot.desc": "Készíts egy függő virágcserepet",
+  "advancements.beautify.light.title": "Megvilágosodás",
+  "advancements.beautify.light.desc": "Készíts egy fényforrást a Beautify-ból",
+  "advancements.beautify.rope.title": "Csomózol?",
+  "advancements.beautify.rope.desc": "Kösd össze a fonalat, hogy kötelet kapj",
+
   "advancements.lillacreate.root.title": "Lilla alkot",
   "advancements.lillacreate.root.desc": "Üdvözöljük a Lilla's Create modpack-ban!",
   "advancements.lillacreate.before_night.title": "Készülj fel az éjszakára",
